--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.1",
     "dotenv": "^16.4.7",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
@@ -26,8 +28,9 @@
   },
   "dependencies": {
     "cron": "^3.5.0",
+    "express": "^4.21.2",
     "instagram-private-api": "^1.46.1",
     "mongoose": "^8.9.5",
-    "twitter-api-v2": "^1.19.0"
+    "twitter-api-sdk": "^1.2.1"
   }
 }
